# asendice

./: .editorconfig  .flake8  CONTRIBUTING.md  mypy.ini  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: run-tests.yml
client/e2e-tests/: games.spec.ts
client/src/: middleware.ts
client/src/components/: GameDetails.svelte  GameList.svelte  Pagination.svelte
server/: __init__.py  app.py  requirements.txt
server/models/: __init__.py  base.py  category.py  game.py  publisher.py
server/routes/: games.py
server/tests/: test_games.py
server/utils/: database.py  seed_database.py
